--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@grpc/proto-loader": "^0.5.4",
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/drawer": "^5.8.0",
     "@react-navigation/native": "^5.3.2",
     "@react-navigation/stack": "^5.3.6",
     "formik": "^2.1.4",
+    "google-protobuf": "^3.12.2",
+    "grpc": "^1.24.2",
+    "grpc-web": "^1.1.0",
+    "protoc": "^1.0.4",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
@@ -23,7 +28,8 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^1.0.0",
     "react-native-screens": "^2.7.0",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-web": "^0.12.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
